#1: add recipe api & doc
